Replaced 'Home' with 'Dashboard' and added corresponding controller

--- a/DigitizingDataAdminApp/Views/Login/Dashboard.cshtml
+++ b/DigitizingDataAdminApp/Views/Login/Dashboard.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_CustomLayout.cshtml";
-    ViewBag.Title = "Home";
+    ViewBag.Title = "Dashboard";
 }
 
-<h2>Home</h2>
+<h2>Dashboard</h2>
