--- a/DigitizingDataAdminApp/Views/Shared/_SideMenu.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_SideMenu.cshtml
@@ -28,12 +28,12 @@
 </head>
 <body>
     <ul class="vertical-menu">
-        <li>@Html.ActionLink("Home", "HomePage", "Index") </li>
-        <li>@Html.ActionLink("Vlsa", "Vlsa", "HomePage")</li>
-        <li>@Html.ActionLink("Cbt", "Cbt", "HomePage")</li>
-        <li>@Html.ActionLink("Users", "Users", "HomePage")</li>
-        <li>@Html.ActionLink("Audit", "Audit", "HomePage")</li>
-        <li>@Html.ActionLink("Logout", "Index", "Index")</li>
+        <li>@Html.ActionLink("Home", "Index", "Dashboard") </li>
+        <li>@Html.ActionLink("Vlsa", "Vlsa", "Dashboard")</li>
+        <li>@Html.ActionLink("Cbt", "Cbt", "Dashboard")</li>
+        <li>@Html.ActionLink("Users", "Users", "Dashboard")</li>
+        <li>@Html.ActionLink("Audit", "Audit", "Dashboard")</li>
+        <li>@Html.ActionLink("Logout", "Index", "Dashboard")</li>
     </ul>
 </body>
 </html>
