--- a/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
@@ -41,8 +41,9 @@
             @Html.DisplayFor(modelItem => item.UserLevel)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "EditUser", new { id=item.Id }) |
+            @Html.ActionLink("Details", "UserDetails", new {id=item.Id }) |
+            @Html.ActionLink("Delete", "DeleteUser", new { id=item.Id })
         </td>
     </tr>
 }
