Added a page for adding a new user to the system

--- a/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
@@ -8,7 +8,7 @@
 <h2>UsersData</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New User", "AddUser")
 </p>
 <table style="width:auto;">
    <thead>
