--- a/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
@@ -8,7 +8,7 @@
 <h2>VslaData</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New Vsla", "AddVsla")
 </p>
 
 <table style="width:800px;">
