--- a/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
@@ -47,5 +47,5 @@
 </fieldset>
 <p>
     @Html.ActionLink("Edit", "EditUser", new { id=Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "UsersData")
 </p>
