--- a/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
@@ -15,16 +15,16 @@
                     <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
-                    <section id="login">
+                    @*<section id="login">
                         @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
+                    </section>*@
+                   @* <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         </ul>
-                    </nav>
+                    </nav>*@
                 </div>
             </div>
         </header>
