--- a/DigitizingDataAdminApp/Views/Dashboard/AddCbt.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddCbt.cshtml
@@ -25,8 +25,7 @@
             @Html.LabelFor(model => model.Region)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Region)
-            @Html.ValidationMessageFor(model => model.Region)
+              @Html.DropDownList("RegionId", Model.VslaRegionsModel,new { @style ="width:250px; height:30px;" })
         </div>
 
         <div class="editor-label">
