--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteCbt.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteCbt.cshtml
@@ -49,6 +49,6 @@
 @using (Html.BeginForm()) {
     <p>
         <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "CbtData")
     </p>
 }
