--- a/DigitizingDataAdminApp/Views/Dashboard/CbtDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtDetails.cshtml
@@ -5,45 +5,49 @@
     ViewBag.Title = "CbtDetails";
 }
 
-<h2>CbtDetails</h2>
 
 <fieldset>
-    <legend>CbtInformation</legend>
-
+    <legend>Community Based Trainer Detailed Information</legend>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Name)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Name)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Region)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Region)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.PhoneNumber)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.PhoneNumber)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Email)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Email)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Status)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Status)
     </div>
+        </div>
 </fieldset>
 <p>
     @Html.ActionLink("Edit", "EditCbt", new { id=Model.Id}) |
