--- a/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
@@ -1,55 +1,27 @@
 ﻿@model DigitizingDataAdminApp.Models.AllCbtInformation
-
+@using GridMvc.Html
 @{
     Layout = "~/Views/Shared/_CustomLayout.cshtml";
     ViewBag.Title = "CbtData";
 }
 
-<h2>CbtData</h2>
-
+<h4>Community Based Trainers(CBTs)</h4>
+<hr />
 <p>
     @Html.ActionLink("Add New CBT", "AddCbt")
 </p>
-<table style="width:auto;">
-   <thead>
-       <tr>
-           <td>Id</td>
-            <td>Name</td>
-            <td>Region</td>
-            <td>Phone Number</td>
-            <td>Email</td>
-           <td>Status</td>
-           <td></td>
-       </tr>
-   </thead>
 
-  @foreach (var item in Model.AllCbtList) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Region)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
- 
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "EditCbt", new { id=item.Id }) |
-            @Html.ActionLink("Details", "CbtDetails", new {id=item.Id }) | 
-            @Html.ActionLink("Delete", "DeleteCbt", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+<div style="width:auto; margin: 0 auto;">
+        @Html.Grid(Model.AllCbtList).Columns(columns => 
+                    {
+                        columns.Add(c => c.Id).Titled("Id");
+                        columns.Add(c => c.Name).Titled("Name");
+                        columns.Add(c => c.Region).Titled("Region");
+                        columns.Add(c => c.PhoneNumber).Titled("Phone Number");
+                        columns.Add(c => c.Email).Titled("Email");
+                        columns.Add(c => c.Status).Titled("Status");
+                        columns.Add().Titled("Edit").Encoded(false).Sanitized(false).RenderValueAs(c => @Html.ActionLink("Edit", "EditCbt", new { id = c.Id }));
+                        columns.Add().Titled("Details").Encoded(false).Sanitized(false).RenderValueAs(c => @Html.ActionLink("Details", "CbtDetails", new { id = c.Id }));
+                        columns.Add().Titled("Delete").Encoded(false).Sanitized(false).RenderValueAs(c => @Html.ActionLink("Delete", "DeleteCbt", new { id = c.Id }));
+                    }).WithPaging(10).Sortable(true)
+    </div>
