--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteCbt.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteCbt.cshtml
@@ -5,50 +5,58 @@
     ViewBag.Title = "DeleteCbt";
 }
 
-<h2>DeleteCbt</h2>
-
-<h3>Are you sure you want to delete this?</h3>
 <fieldset>
-    <legend>CbtInformation</legend>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Name)
+    <legend>Are you sure you want to delete this Cbt Information</legend>
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Name)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Name)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Name)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Region)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Region)
+        </div>
     </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Region)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.PhoneNumber)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Region)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Email)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Email)
+        </div>
     </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.PhoneNumber)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.PhoneNumber)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Email)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Status)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Status)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Status)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Status)
+        </div>
     </div>
 </fieldset>
-@using (Html.BeginForm()) {
-    <p>
-        <input type="submit" value="Delete" /> |
+@using (Html.BeginForm())
+{
+    <div class="form-group">
+        <p>
+            <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
+            |
+            <label>OR</label>
+            |
         @Html.ActionLink("Back to List", "CbtData")
-    </p>
+        </p>
+    </div>
 }
