--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
@@ -5,50 +5,58 @@
     ViewBag.Title = "DeleteUser";
 }
 
-<h2>DeleteUser</h2>
-
-<h3>Are you sure you want to delete this?</h3>
 <fieldset>
-    <legend>UserInformation</legend>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Username)
+    <legend>Are you sure you want to delete this user's information</legend>
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Username)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Username)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Username)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Fullname)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Fullname)
+        </div>
     </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Fullname)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Email)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Email)
+        </div>
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Fullname)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Password)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Password)
+        </div>
     </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Email)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Password)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Password)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.UserLevel)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.UserLevel)
+    <div class="form-group">
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.UserLevel)
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.UserLevel)
+        </div>
     </div>
 </fieldset>
-@using (Html.BeginForm()) {
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
+@using (Html.BeginForm())
+{
+    <div class="form-group">
+        <p>
+            <input class="btn btn-small btn-danger" type="submit" value=" Delete " style="width: 100px;" />
+            |
+            <label>OR</label>
+            |
+        @Html.ActionLink("Back to List", "UsersData")
+        </p>
+    </div>
 }
