--- a/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UserDetails.cshtml
@@ -5,47 +5,50 @@
     ViewBag.Title = "UserDetails";
 }
 
-<h2>UserDetails</h2>
-
 <fieldset>
-    <legend>UserInformation</legend>
-
+    <legend>Registered User Detailed Information</legend>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Username)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Username)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Fullname)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Fullname)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Email)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Email)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Password)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Password)
     </div>
-
+        </div>
+    <div class="form-group">
     <div class="display-label">
          @Html.DisplayNameFor(model => model.UserLevel)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.UserLevel)
     </div>
+       </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "EditUser", new { id=Model.Id }) |
+    @Html.ActionLink("Edit", "EditUser", new { id=Model.Id}) |
     @Html.ActionLink("Back to List", "UsersData")
 </p>
