--- a/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
@@ -1,51 +1,26 @@
 ﻿@model DigitizingDataAdminApp.Models.AllUsersInformation
-
+@using GridMvc.Html
 @{
     Layout = "~/Views/Shared/_CustomLayout.cshtml";
     ViewBag.Title = "UsersData";
 }
 
-<h2>UsersData</h2>
-
+<h4>Registered Users Information</h4>
+<hr />
 <p>
     @Html.ActionLink("Add New User", "AddUser")
 </p>
-<table style="width:auto;">
-   <thead>
-       <tr>
-           <td>Id</td>
-            <td>Username</td>
-            <td>Fullname</td>
-            <td>Email</td>
-            <td>UserLevel</td>
-           <td></td>
-       </tr>
-   </thead>
 
-  @foreach (var item in Model.AllUsersList) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Username)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fullname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
- 
-        <td>
-            @Html.DisplayFor(modelItem => item.UserLevel)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "EditUser", new { id=item.Id }) |
-            @Html.ActionLink("Details", "UserDetails", new {id=item.Id }) |
-            @Html.ActionLink("Delete", "DeleteUser", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+<div style="width:auto; margin: 0 auto;">
+        @Html.Grid(Model.AllUsersList).Columns(columns => 
+                    {
+                        columns.Add(c => c.Id).Titled("UserId");
+                        columns.Add(c => c.Username).Titled("Username");
+                        columns.Add(c => c.Fullname).Titled("Full Name");
+                        columns.Add(c => c.Email).Titled("Email");
+                        columns.Add(c => c.UserLevel).Titled("User Level");
+                        columns.Add().Titled("Edit").Encoded(false).Sanitized(false).RenderValueAs(c => @Html.ActionLink("Edit", "EditUser", new { id = c.Id }));
+                        columns.Add().Titled("Details").Encoded(false).Sanitized(false).RenderValueAs(c => @Html.ActionLink("Details", "UserDetails", new { id = c.Id }));
+                        columns.Add().Titled("Delete").Encoded(false).Sanitized(false).RenderValueAs(c => @Html.ActionLink("Delete", "DeleteUser", new { id = c.Id }));
+                    }).WithPaging(10).Sortable(true)
+    </div>
