--- a/DigitizingDataAdminApp/Views/Login/Index.cshtml
+++ b/DigitizingDataAdminApp/Views/Login/Index.cshtml
@@ -1,48 +1,43 @@
 ﻿@model DigitizingDataAdminApp.Models.UserLogin
 
 @{
+    Layout = "~/Views/Shared/_CustomLoginPage.cshtml";
     ViewBag.Title = "Index";
 }
+<div style="width: auto; margin-left: auto; margin-right: auto;">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
 
-<h2>Index</h2>
-
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-
-    <fieldset>
-        <legend>LoginModel</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Username)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Username)
-            @Html.ValidationMessageFor(model => model.Username)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Password)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Password)
-            @Html.ValidationMessageFor(model => model.Password)
-        </div>
-        @*
-        <div class="editor-label">
-            @Html.LabelFor(model => model.RememberMe)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.RememberMe)
-            @Html.ValidationMessageFor(model => model.RememberMe)
-        </div>
-        *@
-        <p>
-            <input type="submit" value=" Login " />
-        </p>
-    </fieldset>
-}
-
+        <fieldset>
+            <legend>Please Enter your Login Credentials</legend>
+            <div class="login-form" style="margin-left: auto; margin-right: auto; width: 400px;">
+                <div class="form-group">
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Username)
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.Username)
+                        @Html.ValidationMessageFor(model => model.Username)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.Password)
+                    </div>
+                    <div>
+                        @Html.EditorFor(model => model.Password)
+                        @Html.ValidationMessageFor(model => model.Password)
+                    </div>
+                </div>
+                <div class="form-group" style="padding-left:20px;">
+                    <input class="btn btn-small btn-primary" type="submit" value=" Login " style="width: 100px;" />
+                </div>
+            </div>
+        </fieldset>
+    }
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
