--- a/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
@@ -1,54 +1,65 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-    </head>
-    <body>
-        <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    @*<section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>*@
-                   @* <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>*@
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width" />
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/knockout")
+    @Scripts.Render("~/bundles/jquery")
+    <link href="@Url.Content("~/Content/Gridmvc.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/gridmvc.min.js")"></script>
+
+
+</head>
+<body>
+
+    <div class="container wrap sidebar-right">
+        <div class="container-fluid" style="margin-top:20px;">
+            <div class="row">
+                <div class="navbar-header col-mod-12">
+                    <h3>@Html.ActionLink("your logo here", "Index", "Login")</h3>
                 </div>
             </div>
-        </header>
-        <div id="body">
-            
-            <section class="content-wrapper main-content clear-fix">
-                <div id="left-column" style="width:auto; min-height:450px; float:left;">
-                    @Html.Partial("_SideMenu")
+        </div>
+
+
+
+        <div class="container-fluid">
+
+            <div class="model-body row-fluid">
+                <div class="col-md-2">
+                    <div class="well sidebar-offcanvas vertical-align">
+                        <ul class="nav  nav-pills nav-stacked" role="navigation">
+                            <li>@Html.ActionLink("Home", "Dashboard", "Login") </li>
+                            <li>@Html.ActionLink("Vlsa", "VslaData", "Dashboard")</li>
+                            <li>@Html.ActionLink("Cbt", "CbtData", "Dashboard")</li>
+                            <li>@Html.ActionLink("Users", "UsersData", "Dashboard")</li>
+                            <li>@Html.ActionLink("Audit", "AuditLogs", "Dashboard")</li>
+                            <li>@Html.ActionLink("Logout", "Index", "Login")</li>
+                        </ul>
+
+                    </div>
                 </div>
-                <div id="right-column" style="width:auto; min-height:450px; float:left; margin-left:10px;">
+                <div class="col-md-8" style="float: none; margin: 0 auto;">
                     @RenderBody()
                 </div>
 
-            </section>
-        </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - LedgerLink Administrator Portal</p>
-                </div>
-            </div>
-        </footer>
 
-        @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
-    </body>
+            </div>
+        </div>
+
+        <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px;">
+
+            <p style="text-align: center;">&copy; @DateTime.Now.Year - LedgerLink Administrator Portal</p>
+
+        </div>
+    </div>
+
+    @RenderSection("scripts", required: false)
+</body>
 </html>
