Added functionality for logging out and remove caching when the back-button is pressed

--- a/DigitizingDataAdminApp/Views/Dashboard/Dashboard.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/Dashboard.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
+   // ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_CustomLayout.cshtml";
-    ViewBag.Title = "AuditLogs";
 }
 
-<h4>AuditLogs</h4>
+<h2>Dashboard</h2>
 <hr />
