--- a/DigitizingDataAdminApp/Views/Shared/_CustomLoginPage.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLoginPage.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    <title>@ViewBag.Title</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
@@ -39,7 +39,7 @@
 
 
 
-        <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px; min-height">
+        <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px; height:50px;">
 
             <p style="text-align: center;">&copy; @DateTime.Now.Year - LedgerLink Administrator Portal</p>
 
