Added code to allow selecting user types

--- a/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
@@ -52,8 +52,12 @@
                 @Html.LabelFor(model => model.UserLevel)
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.UserLevel)
-                @Html.ValidationMessageFor(model => model.UserLevel)
+               @* @Html.EditorFor(model => model.UserLevel)
+                @Html.ValidationMessageFor(model => model.UserLevel)*@
+                <select id="user_level">
+                    <option value="1">Administrator</option>
+                    <option value="2">User</option>
+                </select>
             </div>
         </div>
         <div class="form-group">
