--- a/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
@@ -22,7 +22,8 @@
         <div class="container-fluid" style="margin-top: 20px;">
             <div class="row">
                 <div class="navbar-header col-mod-12">
-                    <h3>@Html.ActionLink("your logo here", "Index", "Login")</h3>
+                    @*<h3>@Html.ActionLink("your logo here", "Index", "Login")</h3>*@
+                    <img  src="~/Content/Images/logo.jpeg" style="height:50px; padding-left:40px;"/>
                 </div>
             </div>
         </div>
